tests/baselines/reference/parserArrowFunctionExpression13.errors.txt
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression13.ts(1,1): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression13.ts(1,11): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression13.ts(1,19): error TS1109: Expression expected.


==== tests/cases/conformance/parser/ecmascript5/ArrowFunctionExpressions/parserArrowFunctionExpression13.ts (3 errors) ====
    a ? () => a() : (): any => null;
    ~
!!! error TS2304: Cannot find name 'a'.
              ~
!!! error TS2304: Cannot find name 'a'.
                      ~
!!! error TS1109: Expression expected.
    